2008-01-25  Richard Stallman  <rms@gnu.org>

	* subr.el (add-hook): Implement `permanent-local-hook' property.

	* loadhist.el (file-provides, file-requires): Push the filename right.

2008-01-25  Martin Rudalics  <rudalics@gmx.at>

	* emacs-lisp/find-func.el (find-library): Wrap search for
	library name in condition-case to avoid reporting a scan-error.

2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-process-filter): Don't force
	the authentication string to be followed by "\n".

2008-01-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.0.  New commands to clean up some blank
	problems like trailing blanks.  New faces and regexp for visualizing
	the blank problems.  Doc fix.
	(blank-chars, blank-global-modes, blank-chars-value-list)
	(blank-toggle-option-alist, blank-help-text): Initialization fix.
	(blank-indentation, blank-empty, blank-space-after-tab): New faces.
	(blank-indentation, blank-empty, blank-space-after-tab)
	(blank-indentation-regexp, blank-empty-at-bob-regexp)
	(blank-empty-at-eob-regexp, blank-space-after-tab-regexp): New options.
	(blank-cleanup, blank-cleanup-region): New commands.
	(blank-color-on): Code fix.

2008-01-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* ibuffer.el (ibuffer-default-sorting-mode): Add option to sort by
	file name.
	(ibuffer-mode-map): Add binding to sort by file name.
	(ibuffer-filename/process-header-map): New variable.
	(filename-and-process): Add a header that sorts by file name.
	(ibuffer-mode): Mention sorting by file name.

	* ibuf-ext.el (filename/process): New sorter.

2008-01-25  Sven Joachim  <svenjoac@gmx.de>

	* view.el (kill-buffer-if-not-modified): Don't pass t to
	buffer-modified-p.

2008-01-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file): Flush the cache of
	the source file in case of `rename'.  Reported by Pete Forman
	<pete.forman@westerngeco.com>.

2008-01-24  Ken Manheimer  <ken.manheimer@gmail.com>
